fix: paginator in lists will be aligned to the pages information with buttons

--- a/src/app/shared/components/list/list.component.scss
+++ b/src/app/shared/components/list/list.component.scss
@@ -38,6 +38,21 @@ mat-paginator {
   );
 }
 
+::ng-deep .mat-mdc-paginator-page-size,
+mat-mdc-paginator-page-size {
+  display: flex;
+  align-items: center !important;
+}
+
+.mat-mdc-paginator-page-size {
+  justify-content: flex-start;
+}
+
+::ng-deep .mat-mdc-form-field-subscript-wrapper {
+  height: 2px !important;
+  overflow: hidden;
+}
+
 .export-container {
   display: flex;
   align-items: center;
